fix(console): fix alignment with mat outlined "fill" apparence

--- a/gravitee-apim-console-webui/src/shared/components/gio-table-wrapper/gio-table-wrapper.component.scss
+++ b/gravitee-apim-console-webui/src/shared/components/gio-table-wrapper/gio-table-wrapper.component.scss
@@ -78,6 +78,13 @@ $typography: map.get(gio.$mat-theme, typography);
     // Remove form field padding provided to display mat-hint and mat-error. Not used here
     // For search field and mat-paginator
     .gio-table-wrapper__header-bar {
+      .mat-paginator-page-size {
+        align-items: center;
+        .mat-form-field {
+          margin: 0 4px;
+        }
+      }
+
       .mat-form-field-wrapper {
         padding-bottom: 0;
       }
